--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8001:8001"
     environment:
-      - DEBUG=1
+      - DJANGO_DEBUG=1
       - REDIS_HOST=redis
       - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydb  
     volumes:
@@ -26,7 +26,7 @@ services:
     ports:
       - "8002:8002"
     environment:
-      - DEBUG=1
+      - DJANGO_DEBUG=1
       - REDIS_HOST=redis
       - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydb  
     volumes:
@@ -43,7 +43,7 @@ services:
     ports:
       - "8003:8003"
     environment:
-      - DEBUG=1
+      - DJANGO_DEBUG=1
       - REDIS_HOST=redis
       - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydb  
     volumes:
